--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# /bootstrap/css
-# /bootstrap/fonts
-# /bootstrap/icons
-# /bootstrap/js/bootstrap.min.js
+/bootstrap/css
+/bootstrap/fonts
+/bootstrap/icons
+/bootstrap/js/bootstrap.min.js
